--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -6,7 +6,8 @@ html,body {width:100%;height:100%;min-height:100vh;font-size:medium;}
     display: flex;
     position: static;
     width: 100%;
-    height: 100%;
+    height: auto;
+    min-height: 100%;
     text-align: center;
     flex-direction: column;
     justify-content: center;
@@ -57,10 +58,9 @@ nav
     justify-content: center;
     align-items: center;
 }
-nav > a
+nav > span
 {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 0 1rem 0 1rem;
 }
 
 main
@@ -69,8 +69,7 @@ main
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: flex-start;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding: 1rem 0 1rem 0;
 }
 article
 {
@@ -93,6 +92,49 @@ section > ul
 section > p
 {
     text-align: justify;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin: 1em 0 1em 0;
+}
+
+@media screen and (max-width: 810px)
+{
+
+    #site_copyright
+    {
+        display: block;
+        float: none;
+    }
+
+    #site_theme_container
+    {
+        display: block;
+        float: none;
+        margin: 0.5rem 0 0.5rem 0;
+    }
+
+    nav
+    {
+        flex-direction: column;
+    }
+    nav > span
+    {
+        margin: 0.2rem 0 0.2rem 0;
+    }
+
+    article
+    {
+        flex-direction: column;
+        align-items: center;
+        padding: 0.5rem;
+    }
+
+    section
+    {
+        max-width: 100%;
+        margin: 0.5rem 0 0.5rem 0;
+    }
+    section > p
+    {
+        text-align: center;
+    }
+
 }
